<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FortezoPV</string>
    <string name="title_venta_detail">Venta Detail</string>
    <string name="iitulo_ventana">Fortezo Tecnologias</string>
    <string name="titulo_login">Fortezo</string>
    <string name="user">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="titulo_venta">Detalles de la Venta</string>
    <string name="nueva_venta">Nueva Venta</string>
    <string name="productos">Productos</string>
    <string name="opciones">Opciones</string>
    <string name="pagos">Pagos:</string>
    <string name="total_venta">Total:</string>
    <string name="subtotal_venta">Sub-Total:</string>
    <string name="iva_venta">IVA:</string>
    <string name="pago_venta">Pago:</string>
    <string name="descripcion_venta">Descripcion:</string>
    <string name="cantidad_venta">Cantidad:</string>
    <string name="importe_venta">Importe:</string>
    <string name="id_venta">ID:</string>
    <string name="title_activity_venta_detalles">Venta</string>
    <string name="title_activity_formas_pago">Formas de Pago</string>
    <string name="formaspago_titulo">Formas de Pago</string>
    <string name="formaspago_tipo">Tipo de Pago</string>
    <string name="formaspago_cantidad">Cantidad</string>
    <string name="formaspago_documento">No. de Documento</string>
    <string name="formaspago_comision">% de Comisión</string>
    <string name="formaspago_moneda">Moneda</string>
    <string name="formaspago_banco">Banco</string>
    <string name="formaspago_agregar">Agregar Pago</string>
    <string name="action_settings">Action Settings</string>
    <string name="opciones_titulo">Opciones</string>
    <string name="opciones_boton_cotizacion">Contización</string>
    <string name="opciones_desc_cotizacion">Convertir la venta realizada en una Cotización</string>
    <string name="opciones_boton_factura">Generar Factura</string>
    <string name="opciones_desc_factura">Generar la Factura correspondiente a la venta actual</string>
    <string name="opciones_boton_cancelar">Cancelar Venta</string>
    <string name="opciones_desc_cancelar">Cancelar la Venta actual</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_agregar_cliente">Agregar Cliente</string>
    <string name="cliente_titulo">Nombre del Cliente</string>
    <string name="cliente_boton_agregar">Agregar Cliente</string>
    <string name="cliente_boton_crear">Crear Nuevo Cliente</string>
    <string name="title_activity_nuevo_cliente">Crear Nuevo Cliente</string>
    <string name="clientenuevo_titulo">Alta de Cliente Nuevo</string>
    <string name="clientenuevo_tab_1">Datos Generales</string>
    <string name="clientenuevo_boton_agregar">Agregar Cliente</string>
    <string name="clientenuevo_nombre">Nombres (s)</string>
    <string name="clientenuevo_apellido">Apellido (s)</string>
    <string name="clientenuevo_telefono">No. Teléfono</string>
    <string name="clientenuevo_celular">No. Celular</string>
    <string name="clientenuevo_correo">e-Mail</string>
    <string name="clientenuevo_direccion">Dirección</string>
    <string name="clientenuevo_ciudad">Ciudad</string>
    <string name="clientenuevo_estado">Estado</string>
    <string name="clientenuevo_pais">País</string>
    <string name="clientenuevo_tab_2">Datos Fiscales</string>
    <string name="clientenuevo_cp">Código Postal</string>
    <string name="clientenuevo_municipio">Municipio</string>
    <string name="clientenuevo_colonia">Colonia</string>
    <string name="clientenuevo_localidad">Localidad</string>
    <string name="clientenuevo_vendedor">Vendedor</string>
    <string name="clientenuevo_regimen">Regimen Fiscal</string>
    <string name="clientenuevo_razon">Razón Social</string>
    <string name="clientenuevo_rfc">RFC</string>
    <string name="clientenuevo_curp">CURP</string>

</resources>
