<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.roberto.fortezopv.Opciones"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/opciones_titulo"
            android:id="@+id/textView5"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="40dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opciones_boton_cotizacion"
                    android:id="@+id/button"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/opciones_desc_cotizacion"
                    android:id="@+id/textView"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opciones_boton_factura"
                    android:id="@+id/button3"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/opciones_desc_factura"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opciones_boton_cancelar"
                    android:id="@+id/button2"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/opciones_desc_cancelar"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
