<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/principal"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:tabStripEnabled="false"
                android:background="@drawable/abc_ab_bottom_solid_light_holo"
                android:orientation="horizontal"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:visibility="invisible">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="500dp"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_nombre"
                            android:id="@+id/textView"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_telefono"
                            android:id="@+id/textView2"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText2"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_correo"
                            android:id="@+id/textView3"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/editText3"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_ciudad"
                            android:id="@+id/textView4"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText4"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_pais"
                            android:id="@+id/textView5"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText5"
                            android:gravity="center_vertical|center_horizontal" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="501dp"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_apellido"
                            android:id="@+id/textView6"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText6"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_celular"
                            android:id="@+id/textView7"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText7"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_direccion"
                            android:id="@+id/textView8"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/editText8"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_estado"
                            android:id="@+id/textView9"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText9"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_cp"
                            android:id="@+id/textView10"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText10"
                            android:gravity="center_vertical|center_horizontal" />

                        </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="500dp"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_municipio"
                            android:id="@+id/textView11"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText11"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_localidad"
                            android:id="@+id/textView12"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText12"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_regimen"
                            android:id="@+id/textView13"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/editText13"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_rfc"
                            android:id="@+id/textView14"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText14"
                            android:gravity="center_vertical|center_horizontal" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="501dp"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_colonia"
                            android:id="@+id/textView15"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText15"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_vendedor"
                            android:id="@+id/textView16"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText16"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_razon"
                            android:id="@+id/textView17"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/editText17"
                            android:gravity="center_vertical|center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/clientenuevo_curp"
                            android:id="@+id/textView18"
                            android:gravity="center_vertical|center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText18"
                            android:gravity="center_vertical|center_horizontal" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</LinearLayout>