<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.roberto.fortezopv.AgregarCliente"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cliente_titulo"
                android:id="@+id/textView"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="30dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cliente_boton_agregar"
                android:id="@+id/button"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cliente_boton_crear"
                android:id="@+id/button2"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
